--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,47 @@
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
+/* font awesome */
+@import"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css";
+
+
+/* common styles or utilities */
+body{
+    font-family: 'Poppins', sans-serif;
+    background-color: #F3F1FF;;
+}
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.container{
+    width: 870px;
+    background-color: #FFFFFF;
+    padding: 30px;
+    margin-top: 21px;
+    border-radius: 5px;
+
+}
+hr{
+    border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
+}
 /* Top Players style */
+.top-players{
+    margin-bottom: 30px;
+}
+.section-title{
+    color: #562EFF;
+    font-size: 24px;
+    margin-top: 3px;
+}
 .players{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
+    
 }
 .player{
     display: flex;
@@ -10,4 +50,82 @@
 .player img{
     width: 56px;
     height: 56px;
+}
+.player-name{
+    margin-left: 16px;
+    font-size: 18px;
+}
+/* ------------------
+top blogs styles
+------------------- */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+}
+.blog{
+    display: flex;
+
+}
+.blog .thumbnail img{
+    width: 177px;
+    height: 117px
+}
+.blog-info{
+    margin-left: 16px;
+}
+.blog-title{
+    font-size: 20px;
+}
+.blog-author{
+    color: #9F9F9F;
+    font-size: 16px;
+}
+.blog-author a{
+    text-decoration: none;
+    font-size: 16px;
+    color: #562EFF;
+}
+/*---------------
+courses styles 
+----------------*/
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+
+}
+.course .course-banner img{
+    width: 266px;
+    height: 141px;
+}
+.course-info{
+    display: flex;
+    align-items: center;
+}
+.course-author{
+    color: #ED6B4F;
+}
+.rating .filled{
+    color: #FFC014;
+    font-size: 16px;
+}
+.rating .empty{
+    color: #AEAEAE;
+    font-size: 16px;
+}
+.numberof-rate{
+    margin: 0px 25px 0px 10px;
+    color: #A2A2A2;
+}
+.course-duration{
+    background-color: #FEE5DF;
+    padding: 2px 8px;
+    border-radius: 20px;
+}
+.course-duration i{
+    color: #FF4A60;
+}
+.course-duration span{
+    color: #FF4A60;
 }
