--- a/styles/style.css
+++ b/styles/style.css
@@ -95,6 +95,9 @@ courses styles
     grid-column-gap: 24px;
 
 }
+.course{
+    margin-bottom: 40px;
+}
 .course .course-banner img{
     width: 266px;
     height: 141px;
@@ -128,4 +131,38 @@ courses styles
 }
 .course-duration span{
     color: #FF4A60;
+}
+
+/*------------------
+    Media Querise 
+-------------------*/
+
+/* Mobile divices */
+
+@media only screen and (max-width:688px) {
+    .container {
+        width: 100%;
+    }
+    .players, .blogs, .courses {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player, .blog {
+        flex-direction: column;
+    }
+    
+}
+
+/* tablet divices */
+
+@media only screen and (min-width:688px) and (max-width:992px) {
+    .container{
+        width: 100%;
+    }
+    .players, .courses {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .blogs {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    
 }
